refactored views and switched to mako templates

--- a/development.ini
+++ b/development.ini
@@ -11,6 +11,9 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
+mako.directories = pycomm:templates
+mako.module_directory = %(here)s/data/templates
+
 sqlalchemy.url = sqlite:///%(here)s/pycomm.db
 
 [server:main]
