--- a/production.ini
+++ b/production.ini
@@ -10,6 +10,9 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
+mako.directories = pycomm:templates
+mako.module_directory = %(here)s/data/templates
+
 sqlalchemy.url = sqlite:///%(here)s/pycomm.db
 
 [server:main]
