added beaker support

--- a/development.ini
+++ b/development.ini
@@ -10,11 +10,18 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    pyramid_beaker
 
 mako.directories = pycomm:templates
 mako.module_directory = %(here)s/data/templates
 
 sqlalchemy.url = sqlite:///%(here)s/pycomm.db
+
+session.type = file
+session.data_dir = %(here)s/data/sessions/data
+session.lock_dir = %(here)s/data/sessions/lock
+session.key = pycomm
+session.secret = pycomm
 
 [server:main]
 use = egg:waitress#main
